# SaltyBot

./: .env  .gitignore  Cargo.toml
glossary/: glossary.json
src/: command.rs  glossary.rs  main.rs  up.sql  utils.rs
