[package]
name = "saltbot"
version = "0.1.0"
authors = ["Kristopher Bullinger <kris.bullinger@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"
chrono = "0.4.19"
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
percent-encoding = "2.1.0"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
