[package]
name = "saltbot"
version = "0.1.0"
authors = ["Kristopher Bullinger <kris.bullinger@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"
chrono = "0.4.19"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
once_cell = "1.12.0"
serde_json = "1.0.81"
snafu = "0.8.3"
arrayvec = "0.7.4"
dotenvy = "0.15.7"
envy = "0.4.2"
