[package]
name = "saltbot"
version = "0.1.0"
authors = ["Kristopher Bullinger <kris.bullinger@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity.git", rev = "4bf09a883168b8c1998e78774cadd56cbc6407c3", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"
chrono = "0.4.19"
image = "0.23.14"
imageproc = "0.22.0"
rusttype = "0.9.2"
reqwest = { version = "0.11.4", features = ["rustls-tls"], default-features = false }
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
once_cell = "1.12.0"
serde_json = "1.0.81"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
